# ThesisProject

./: .gitignore  README.md  ctest.c  package-lock.json  package.json
data/: 100-nodes-1-sink-2.txt  100-nodes-1-sink.txt  10_minute_succesive_nodes_cover_cover.csv  10_minute_succesive_nodes_cover_forward.csv  10_minute_succesive_nodes_cover_original.csv  10_minute_succesive_nodes_forward.csv  10_minute_succesive_nodes_original.csv  15a640ea_forward.txt  19-succesive-nodes-1.txt  19-succesive-nodes-2.txt  19-succesive-nodes-3.txt  19-succesive-nodes-4.txt  2066e39b_forward.txt  3ceebfee_original.txt  500-nodes-1-sink-1.txt  a73919a5_original.txt  data-behandling.py  latency  layer1.csv  layer10.csv  layer15.csv  layer18.csv  layer5.csv  message-latency.csv
data/10_minutes_10_successive_nodes_cover_data/: 0.txt  36d93178_cover.txt  36d93178_forward.txt  36d93178_original.txt  4a093ef6_cover.txt  (+28 more)
devices/: CMakeLists.txt  DiffieHellmanGenerator.c  DiffieHellmanGenerator.py  Makefile  diffie  key.pem  keyCheckter.py  keyReader.py  mpz_test  mpz_test.c
devices/keys/: key.pem  newkey.pem
devices/spark_particle/TestRSA/: README.md  project.properties
devices/spark_particle/TestRSA/src/: TestRSA.ino
keys/: AES-128  generator.py
sensor/: app.js  getAllKeys.sh  getKeys.sh  package-lock.json  package.json  startNodes.sh  startNodesSink.sh  startNodesToRemote.sh  startSuccessiveNodes.sh
shared/: AES-crypto.js  logcolors.js  processargs.js
sink/: app.js  package-lock.json  package.json
src/: networking.js  server.js
test/: .#test-tutorial.js  main-test.spec.js
(+19 files in other folders)
